--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "package:linux": "npm run build:main && electron-builder --linux  --publish never",
     "rebuild": "electron-rebuild --parallel --types prod,dev,optional --module-dir release/app",
     "build": "concurrently \"npm run build:main\" \"npm run build:renderer\"",
+    "build:watch": "concurrently \"npm run build:main:watch\" \"npm run build:renderer:watch\"",
     "build:main": "cross-env NODE_ENV=development webpack --config ./configs/webpack.config.main.ts",
     "build:main:watch": "cross-env NODE_ENV=development webpack --config ./configs/webpack.config.main.ts --watch",
     "build:renderer": "cross-env NODE_ENV=development webpack --config ./configs/webpack.config.renderer.ts",
@@ -25,7 +26,7 @@
     "@babel/core": "^7.22.1",
     "@babel/preset-env": "^7.22.4",
     "@babel/preset-react": "^7.22.3",
-    "@electron/rebuild": "^3.2.13",
+    "@electron/rebuild": "^3.7.1",
     "@types/react": "^18.2.8",
     "@types/react-dom": "^18.2.4",
     "@types/webpack-bundle-analyzer": "^4.6.0",
@@ -67,6 +68,7 @@
     "@reduxjs/toolkit": "^1.9.5",
     "chalk": "^5.4.1",
     "framer-motion": "^6.5.1",
+    "ramda": "^0.30.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.9.0",
@@ -75,6 +77,7 @@
     "redux": "^4.2.1",
     "redux-logger": "^3.0.6",
     "redux-observable": "^2.0.0",
+    "rxjs": "^7.8.1",
     "triple-beam": "^1.4.1",
     "util": "^0.12.5",
     "winston": "^3.17.0",
@@ -116,5 +119,8 @@
     "extraResources": [
       "./assets/**"
     ]
+  },
+  "optionalDependencies": {
+    "dmg-license": "^1.0.11"
   }
 }
